@@ -900,6 +900,35 @@ const char* readActionOn_xpm[] = {
 "                  "};
 
 
+const char* readActionDisabled_xpm[] = {
+"18 18 7 1",
+" 	c None",
+".	c #252525",
+"+	c #313131",
+"@	c #393939",
+"#	c #424242",
+"$	c #4A4A4A",
+"%	c #585858",
+"..................",
+"..................",
+"..................",
+"..................",
+".....@@@@+........",
+".....%%%%%%+......",
+".....%%#+$%$......",
+".....%%@.#%$......",
+".....%%##%%@......",
+".....%%%%%$.......",
+".....%%@+%%#......",
+".....%%@.@%%......",
+".....%%@..%%#.....",
+".....@@...+@@.....",
+"..................",
+"..................",
+"..................",
+".................."};
+
+
 const char* metronomeOff_xpm[] = {
 "13 23 3 1",
 " 	c None",
