@@ -89,6 +89,7 @@ extern const char* armOn_xpm[];
 
 extern const char* readActionOn_xpm[];
 extern const char* readActionOff_xpm[];
+extern const char* readActionDisabled_xpm[];
 
 extern const char* channelStop_xpm[];
 extern const char* channelPlay_xpm[];
